--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="head">
+        <h1>Calculator</h1>
+    </div>
     <div class="container">
+        
         <div class="result">
             <p id="result"> 0</p>
         </div>
